# CMU_Trajectory_Error

./: .gitignore  CMakeLists.txt  README.md  make_error_graphs.gnu  package.xml
field_files/: global_path.csv  global_path_1.csv
src/: Calc_Errors.cpp  Testing.cpp
